--- a/apps/backend/modules/justification_type/config/generator.yml
+++ b/apps/backend/modules/justification_type/config/generator.yml
@@ -25,6 +25,7 @@ generator:
         actions:
           _new:
             label: Nuevo tipo de justificación
+            credentials: [edit_justification_type]
       filter:
         class:  false
       form:    ~
