--- a/apps/backend/modules/commission/config/generator.yml
+++ b/apps/backend/modules/commission/config/generator.yml
@@ -92,7 +92,7 @@ generator:
           close:
             label:          Close period
             action:         close
-            credentials:    [close_course_period]
+            credentials:    [close_course]
             condition:      canBeClosed
 
           printCalification:
