--- a/apps/backend/config/menu.yml
+++ b/apps/backend/config/menu.yml
@@ -245,29 +245,29 @@ root:
 
       student_attendance:
         title: Attendance
-        credentials: [edit_student_attendance, edit_student_attendance_history]
+        credentials: [edit_absence_per_day, edit_student_attendance_history]
         menu:
           attendance_show_day:
             title: Asistencia por día
             url: @student_attendance_day_show_day
-            credentials: [edit_student_attendance, edit_student_attendance_history]
+            credentials: [edit_absence_per_day, edit_student_attendance_history]
           attendance_show_week:
             title: Asistencia por semana
             url: @student_attendance_day
-            credentials: [edit_student_attendance, edit_student_attendance_history]
+            credentials: [edit_absence_per_day, edit_student_attendance_history]
             
       student_attendance_subject:
         title: Attendance (subject)
-        credentials: [edit_student_attendance, edit_student_attendance_history]
+        credentials: [edit_absense_per_subject, edit_student_attendance_history]
         menu:
           attendance_show_day:
             title: Asistencia por día
             url: @student_attendance_subject_show_day
-            credentials: [edit_student_attendance, edit_student_attendance_history]
+            credentials: [edit_absense_per_subject, edit_student_attendance_history]
           attendance_show_week:
             title: Asistencia por semana
             url: @student_attendance_subject
-            credentials: [edit_student_attendance, edit_student_attendance_history]
+            credentials: [edit_absense_per_subject, edit_student_attendance_history]
       attendance_justification:
         title: Attendance justification
         url: @attendance_justification
