--- a/apps/backend/modules/division_course/config/generator.yml
+++ b/apps/backend/modules/division_course/config/generator.yml
@@ -41,7 +41,7 @@ generator:
 
           manage_students:
             action:         courseSubjectStudent
-            credentials:    [edit_course]
+            credentials:    [edit_course_subject_students]
             condition:  canManageStudents
 
           califications:
