--- a/apps/backend/modules/commission/config/generator.yml
+++ b/apps/backend/modules/commission/config/generator.yml
@@ -21,7 +21,7 @@ generator:
           %%_commission_info%%
         actions:
           _new:
-            credentials:    [new_course]
+            credentials:    [edit_course]
             label:          Nueva comisión
         batch_actions: []
         object_actions:
