--- a/apps/backend/modules/optional_school_year/config/security.yml
+++ b/apps/backend/modules/optional_school_year/config/security.yml
@@ -1,5 +1,5 @@
 index:
-  credentials:   [show_school_year]
+  credentials:   [show_career_school_year]
 
 optional:
-  credentials:    [edit_school_year]
+  credentials:    [edit_career_school_year]
