--- a/apps/backend/config/menu.yml
+++ b/apps/backend/config/menu.yml
@@ -80,6 +80,7 @@ root:
           change_status_motive:
             title: Motivos de cambio de estado
             url: @change_status_motive
+            credentials:  [show_change_status_motive]
       separator:
       users:
         title: Usuarios
