--- a/apps/backend/modules/absence_type/config/security.yml
+++ b/apps/backend/modules/absence_type/config/security.yml
@@ -1,11 +1,11 @@
 index:
-  credentials: [[edit_absence_type, new_absence_type]]
+  credentials: [edit_absence_type]
 
 new:
-  credentials: [new_absence_type]
+  credentials: [edit_absence_type]
 
 create:
-  credentials: [new_absence_type]
+  credentials: [edit_absence_type]
 
 edit:
   credentials: [edit_absence_type]
@@ -14,5 +14,5 @@ update:
   credentials: [edit_absence_type]
 
 delete:
-  credentials: [new_absence_type]
+  credentials: [edit_absence_type]
 
