--- a/apps/backend/modules/career_school_year_period/config/generator.yml
+++ b/apps/backend/modules/career_school_year_period/config/generator.yml
@@ -35,7 +35,7 @@ generator:
             action: back
           _new:
             label:       Nuevo período
-            credentials: [edit_school_year]
+            credentials: [edit_career_school_year]
       filter: ~
       form:    ~
       edit:    ~
