--- a/apps/backend/modules/commission/config/security.yml
+++ b/apps/backend/modules/commission/config/security.yml
@@ -2,10 +2,10 @@ index:
   credentials: [show_course]
 
 new:
-  credentials: [new_course]
+  credentials: [edit_course]
 
 create:
-  credentials: [new_course]
+  credentials: [edit_course]
 
 edit:
   credentials: [edit_course]
@@ -41,4 +41,4 @@ commissionSubjectStudentsRegularity:
   credentials:  [edit_course]
 
 califications:
-  credentials:  [[edit_course, edit_commission]]
+  credentials:  [edit_course]
