--- a/apps/backend/modules/course/config/generator.yml
+++ b/apps/backend/modules/course/config/generator.yml
@@ -66,7 +66,7 @@ generator:
 
         actions:
           _new:
-            credentials: [new_course]
+            credentials: [edit_course]
             label:        Nuevo curso
       filter:
         class: false
