--- a/apps/backend/modules/orientation/config/generator.yml
+++ b/apps/backend/modules/orientation/config/generator.yml
@@ -22,7 +22,7 @@ generator:
             credentials: [edit_orientation]
           sub_orientations:
             label: Sub orientations
-            credentials: [edit_sub_orientation]
+            credentials: [edit_orientation]
             action: SubOrientations
           _delete:
             credentials: [edit_orientation]
