--- a/apps/backend/modules/student_office/config/security.yml
+++ b/apps/backend/modules/student_office/config/security.yml
@@ -1,23 +1,23 @@
 index:
-  credentials: [show_student_office]
+  credentials: [show_personal]
 
 new:
-  credentials: [edit_student_office]
+  credentials: [edit_personal]
 
 create:
-  credentials: [edit_student_office]
+  credentials: [edit_personal]
 
 edit:
-  credentials: [edit_student_office]
+  credentials: [edit_personal]
 
 update:
-  credentials: [edit_student_office]
+  credentials: [edit_personal]
 
 show:
-  credentials: [show_student_office]
+  credentials: [show_personal]
 
 delete:
-  credentials: [edit_student_office]
+  credentials: [edit_personal]
 
 personActivation:
-  credentials: [edit_student_office]
+  credentials: [edit_personal]
