--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -792,6 +792,10 @@ sf_guard_password:
   url:   /request_password
   param: { module: sfGuardAuth, action: password }
 
+sf_guard_forgot_password:
+  url:   /forgot_password
+  param: { module: sfGuardForgotPassword, action: password }
+
 manual_administracion:
   url: /manual_administracion
   param: { module: default, action: displayAdministrationManual }
